--- a/www/templates/tab-checkIn.html
+++ b/www/templates/tab-checkIn.html
@@ -23,7 +23,7 @@
 
             <div class="item item-avatar item-text-wrap">
                 <h1>{{ res.title }}</h1>
-                <h2>{{ res._year_data }} {{ res.runtime }} {{ res.rated }}</h2>
+                <h2>{{ res._year_data }} | {{ res.runtime }} | {{ res.rated }}</h2>
             </div>
 
             <div class="item item-body">
