--- a/www/templates/tab-checkIn.html
+++ b/www/templates/tab-checkIn.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="item item-divider" align="right">
-                <a ng-href="#/tab/checkIn/{{res}}"><button class="button button-positive">Check in</button></a>
+                <a href="#/tab/checkIn/{{res.imdbid}}"><button class="button button-positive">Check in</button></a>
             </div>
 
             </div>
