--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -15,9 +15,9 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-checkIn"></ion-nav-view>
   </ion-tab>
 
-  <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <!-- My Check-ins Tab -->
+  <ion-tab title="My Check-ins" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/myCheckIns">
+    <ion-nav-view name="tab-myCheckIns"></ion-nav-view>
   </ion-tab>
 
 
