Fix bug, link to movies (only ios works)

--- a/www/templates/tab-checkIn.html
+++ b/www/templates/tab-checkIn.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="item item-body">
-                <img class="full-image" src="{{ res.poster }}">
+                <img class="full-image" ng-src="{{ res.poster }}">
                 <p>
                 {{ res.plot }}
                 </p>
