--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,6 +1,5 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="Pocket Reel">
   <ion-content class="padding">
-    <h3>Welcome to Pocket Reel</h3>
     <h4>Recent activity</h4>
     <ul>
       <li ng-repeat="item in dummyData | limitTo:5">
