--- a/www/templates/checkIn-detail.html
+++ b/www/templates/checkIn-detail.html
@@ -14,7 +14,7 @@
                     <i class="icon ion-happy-outline"></i>               
                 </div>
                 
-                <button class="button button-block button-positive" ng-click="confirmCheckIn(userScore)">OK</button>
+                <button class="button button-block button-calm" ng-click="confirmCheckIn(userScore)">OK</button>
 
             </div>
         </div>
