--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -4,6 +4,10 @@
     <ion-toggle  ng-model="settings.enableFriends">
         Enable Friends
     </ion-toggle>
+
+    <ion-item class="center"><button class="button button-assertive" ng-click="logout()">Log out</button></ion-item>
+    
+
     </ion-list>
   </ion-content>
 </ion-view>
