--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,8 +1,3 @@
-<!--
-Create tabs with an icon and label, using the tabs-positive style.
-Each tab's child <ion-nav-view> directive will have its own
-navigation history that also transitions its views in and out.
--->
 <ion-tabs class="tabs-icon-top tabs-color-active-calm">
 
   <!-- Home Tab -->
@@ -18,6 +13,11 @@ navigation history that also transitions its views in and out.
   <!-- My Check-ins Tab -->
   <ion-tab title="My Check-ins" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/myCheckIns">
     <ion-nav-view name="tab-myCheckIns"></ion-nav-view>
+  </ion-tab>
+
+  <!-- My account Tab -->
+  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
+    <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
 
