--- a/www/templates/auth-signin.html
+++ b/www/templates/auth-signin.html
@@ -7,14 +7,14 @@
     <div class="list">
         <label class="item item-input">
         <span class="input-label">Username</span>
-        <input type="text" ng-model="user.email">
+        <input type="text" ng-model="userCredentials.mail">
         </label>
         <label class="item item-input">
         <span class="input-label">Password</span>
-        <input type="password" ng-model="user.password">
+        <input type="password" ng-model="userCredentials.password">
         </label>
         <label class="item item-input">
-        <button class="button button-block button-calm" ng-click="validateUser()">
+        <button class="button button-block button-calm" ng-click="validateUser(userCredentials)">
         Log In
         </button>
         </label>
