Checkins on dashboard, signup requires username

--- a/www/templates/auth-signup.html
+++ b/www/templates/auth-signup.html
@@ -3,6 +3,12 @@
     <ion-content class="padding">
     
     <div class="list">
+
+        <label class="item item-input">
+            <span class="input-label">User name</span>
+            <input type="text" ng-model="newUserCredentials.username">
+        </label>
+
         <label class="item item-input">
             <span class="input-label">E-mail</span>
             <input type="text" ng-model="newUserCredentials.mail">
