--- a/www/templates/tab-myBadges.html
+++ b/www/templates/tab-myBadges.html
@@ -1,7 +1,16 @@
 <ion-view view-title="My badges">
 	<ion-content class="padding">
+		
+		<h4>Badges</h4>
 
-        Bananananananan
+		<div ng-if="myBadges.length < 1 || !myBadges">
+			<p>No badges yet!</p>
+		</div>
 
+		<ul>
+			<li>
+				
+			</li>
+		</ul>
 	</ion-content>
 </ion-view>
