--- a/www/templates/auth-signin.html
+++ b/www/templates/auth-signin.html
@@ -6,7 +6,7 @@
     </div>
     <div class="list">
         <label class="item item-input">
-        <span class="input-label">Username</span>
+        <span class="input-label">Username (e-mail)</span>
         <input type="text" ng-model="userCredentials.mail">
         </label>
         <label class="item item-input">
