--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -18,7 +18,7 @@
         <div class="list card">
 
           <div class="item item-avatar item-divider">
-            <img src="img/user_default.png">
+            <img src="{{ item.userimage }}">
             <h2>{{ item.user }}</h2>
             <p>{{ item.time }}</p>
           </div>
