--- a/www/templates/auth-signin.html
+++ b/www/templates/auth-signin.html
@@ -7,7 +7,7 @@
     <div class="list">
         <label class="item item-input">
         <span class="input-label">Username (e-mail)</span>
-        <input type="text" ng-model="userCredentials.mail">
+        <input type="email" ng-model="userCredentials.mail">
         </label>
         <label class="item item-input">
         <span class="input-label">Password</span>
