--- a/www/templates/auth-signup.html
+++ b/www/templates/auth-signup.html
@@ -11,7 +11,7 @@
 
         <label class="item item-input">
             <span class="input-label">E-mail</span>
-            <input type="text" ng-model="newUserCredentials.mail">
+            <input type="email" ng-model="newUserCredentials.mail">
         </label>
         
         <label class="item item-input">
